fixing spacing between search button and search bar

--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -1,12 +1,21 @@
 .searchTool {
     display: inline-flex;
+    width: auto;
+}
+.searchTool:focus{
+    border: 2px solid rgb(241, 189, 93);
 }
 .searchButton {
     background-color: rgb(241, 189, 93);
     cursor: pointer;
 }
+.searchButton:hover{
+    background-color: rgb(250, 160, 58);
+    cursor: pointer;
+}
 .searchBar {
-    padding: 0 20% 0;
+    border: 0;
+    width: 100%;
     display: block;
     justify-content: center;
     font-size: 20px;
